--- a/app/src/main/res/layout/character_staff_list_layout.xml
+++ b/app/src/main/res/layout/character_staff_list_layout.xml
@@ -47,7 +47,7 @@
         android:id="@+id/voice_actor_image_container"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        app:layout_constraintTop_toBottomOf="@id/character_image_container"
+        app:layout_constraintTop_toBottomOf="@id/character_role"
         app:layout_constraintEnd_toEndOf="parent"
         app:cardCornerRadius="60dp"
         android:layout_marginTop="8dp">
@@ -57,7 +57,8 @@
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
             android:contentDescription="@string/voice_actor_image_content_desc"
-            android:src="@drawable/voice_actor"/>
+            tools:src="@drawable/voice_actor"
+            android:src="@color/grey"/>
     </com.google.android.material.card.MaterialCardView>
 
     <TextView
