--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -35,7 +35,7 @@
             tools:listitem="@layout/anime_list_layout"/>
 
         <TextView
-            android:id="@+id/latest_episode"
+            android:id="@+id/today_episode"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
@@ -45,12 +45,12 @@
             android:text="@string/latest_updated_episode_text" />
 
         <include
-            android:id="@+id/latest_episode_loading_layout"
+            android:id="@+id/today_episode_loading_layout"
             tools:visibility="gone"
             layout="@layout/list_loading_layout"/>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/latest_episode_rc_view"
+            android:id="@+id/today_episode_rc_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -76,6 +76,7 @@
             android:id="@+id/anime_suggestion_rc_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
             android:orientation="horizontal"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/anime_list_layout"/>
