--- a/app/src/main/res/layout/character_staff_list_layout.xml
+++ b/app/src/main/res/layout/character_staff_list_layout.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:paddingEnd="8dp"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="RtlSymmetry">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/character_image_container"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="80dp"
+        android:layout_height="110dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:cardCornerRadius="60dp"
         android:layout_marginTop="8dp">
         <ImageView
             android:id="@+id/character_image"
@@ -20,36 +21,38 @@
             android:scaleType="centerCrop"
             android:contentDescription="@string/character_image_content_desc"
             android:src="@drawable/anime_character"/>
+
+        <TextView
+            android:id="@+id/character_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:fadingEdgeLength="12dp"
+            android:maxLines="2"
+            android:ellipsize="end"
+            android:padding="2dp"
+            android:background="@drawable/gradient_bg"
+            android:fadingEdge="vertical"
+            android:textSize="14sp"
+            android:textColor="@color/white"
+            tools:text="Itadori, Yuuji"/>
     </com.google.android.material.card.MaterialCardView>
 
-    <TextView
-        android:id="@+id/character_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/character_image_container"
-        app:layout_constraintStart_toEndOf="@id/character_image_container"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="8dp"
-        android:textSize="16sp"
-        android:textColor="@color/colorPrimary"
-        tools:text="Itadori, Yuuji"/>
+
     <TextView
         android:id="@+id/character_role"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/character_name"
-        app:layout_constraintStart_toEndOf="@id/character_image_container"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="8dp"
+        app:layout_constraintTop_toBottomOf="@id/character_image_container"
+        app:layout_constraintStart_toStartOf="@id/character_image_container"
         tools:text="Main"/>
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/voice_actor_image_container"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="80dp"
+        android:layout_height="110dp"
         app:layout_constraintTop_toBottomOf="@id/character_role"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:cardCornerRadius="60dp"
+        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="8dp">
         <ImageView
             android:id="@+id/voice_actor_image"
@@ -59,26 +62,25 @@
             android:contentDescription="@string/voice_actor_image_content_desc"
             tools:src="@drawable/voice_actor"
             android:src="@color/grey"/>
+
+        <TextView
+            android:id="@+id/voice_actor_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:background="@drawable/gradient_bg"
+            android:padding="2dp"
+            android:maxLines="2"
+            android:textSize="14sp"
+            android:textColor="@color/white"
+            tools:text="Enoki, Junya"/>
     </com.google.android.material.card.MaterialCardView>
 
-    <TextView
-        android:id="@+id/voice_actor_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/voice_actor_image_container"
-        app:layout_constraintEnd_toStartOf="@id/voice_actor_image_container"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="8dp"
-        android:textSize="16sp"
-        android:textColor="@color/colorPrimary"
-        tools:text="Enoki, Junya"/>
     <TextView
         android:id="@+id/voice_actor_language"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/voice_actor_name"
-        app:layout_constraintEnd_toStartOf="@id/voice_actor_image_container"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="8dp"
+        app:layout_constraintTop_toBottomOf="@id/voice_actor_image_container"
+        app:layout_constraintStart_toStartOf="@id/voice_actor_image_container"
         tools:text="Japanese"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
