--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -12,14 +12,14 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.25"/>
+        app:layout_constraintGuide_percent="0.20"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/poster_guide"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.20"/>
+        app:layout_constraintGuide_percent="0.15"/>
 
     <ImageView
         android:id="@+id/content_background"
@@ -32,16 +32,22 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:contentDescription="@string/background_content_desc"
         android:background="@drawable/rounded_rectangle_white"/>
-    
-    <ImageView
-        android:id="@+id/anime_poster"
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/anime_poster_container"
         android:layout_width="120dp"
         android:layout_height="180dp"
         android:layout_marginStart="16dp"
         app:layout_constraintTop_toTopOf="@id/poster_guide"
-        app:layout_constraintStart_toStartOf="@id/content_background"
-        android:contentDescription="@string/image_poster_content_desc"
-        android:src="@color/colorPrimaryDark"/>
+        app:layout_constraintStart_toStartOf="@id/content_background">
+        <ImageView
+            android:id="@+id/anime_poster"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/image_poster_content_desc"
+            android:src="@color/colorPrimaryDark"/>
+    </com.google.android.material.card.MaterialCardView>
+
     
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/favorite_button"
@@ -60,7 +66,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="@id/content_background"
-        app:layout_constraintStart_toEndOf="@id/anime_poster"
+        app:layout_constraintStart_toEndOf="@id/anime_poster_container"
         app:layout_constraintEnd_toEndOf="@id/content_background"
         android:layout_marginTop="24dp"
         android:paddingStart="16dp"
@@ -77,7 +83,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintStart_toEndOf="@id/anime_poster"
+        app:layout_constraintStart_toEndOf="@id/anime_poster_container"
         app:layout_constraintTop_toBottomOf="@id/anime_title"
         android:contentDescription="@string/star_icon_content_desc"
         android:src="@drawable/ic_baseline_star_24"/>
@@ -98,7 +104,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         app:tabMode="scrollable"
-        app:layout_constraintTop_toBottomOf="@id/anime_poster"
+        app:layout_constraintTop_toBottomOf="@id/anime_poster_container"
         app:layout_constraintStart_toStartOf="@id/content_background"
         app:layout_constraintEnd_toEndOf="@id/content_background">
         <com.google.android.material.tabs.TabItem
