--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -2,9 +2,11 @@
 <PreferenceScreen
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <ListPreference
-        app:title="Select Language"
+        app:title="@string/select_language_text"
         app:key="language"
-        app:summary="English"
-        app:defaultValue="English"/>
+        app:summary="%s"
+        app:defaultValue="en"
+        app:entries="@array/language"
+        app:entryValues="@array/languageAlias"/>
 
 </PreferenceScreen>
