--- a/favorite/src/main/res/layout/favorite_fragment.xml
+++ b/favorite/src/main/res/layout/favorite_fragment.xml
@@ -5,7 +5,8 @@
     android:id="@+id/favorite"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.FavoriteFragment">
+    android:background="@color/softBlack"
+    tools:context="com.dargoz.favorite.ui.FavoriteFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/favorite_list_rc_view"
@@ -24,6 +25,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/white"
         android:text="@string/no_favorite_list_text"
         android:visibility="gone"
         />
