--- a/app/src/main/res/layout/manga_fragment.xml
+++ b/app/src/main/res/layout/manga_fragment.xml
@@ -54,6 +54,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_marginBottom="16dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/manga_list_layout"/>
 
