--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -29,13 +29,13 @@
         tools:layout="@layout/manga_fragment" >
         <action
             android:id="@+id/action_mangaFragment_to_newsFragment"
-            app:destination="@id/newsFragment" />
+            app:destination="@id/searchFragment" />
     </fragment>
     <fragment
-        android:id="@+id/newsFragment"
-        android:name="com.dargoz.capstone.ui.NewsFragment"
-        android:label="news_fragment"
-        tools:layout="@layout/news_fragment" >
+        android:id="@+id/searchFragment"
+        android:name="com.dargoz.capstone.ui.SearchFragment"
+        android:label="search_fragment"
+        tools:layout="@layout/search_fragment" >
         <action
             android:id="@+id/action_newsFragment_to_personalFragment"
             app:destination="@id/personalFragment" />
